provide initial test suite

--- a/etc/stx.conf
+++ b/etc/stx.conf
@@ -32,8 +32,12 @@ build : lint
     VITE_BUILD_FORMATS=es,cjs vite --config etc/vite.mts build --mode production
     VITE_BUILD_FORMATS=umd    vite --config etc/vite.mts build --mode production
 
-#   execute simple sample for testing
+#   run test suite
 test
+    NODE_OPTIONS="--import=tsx" mocha tst/mqtt-plus.spec.ts
+
+#   execute simple sample for testing
+sample
     npx tsx sample/sample.ts
 
 #   cleanup (built artifacts)
