add D2 and provide sequence diagrams

--- a/etc/stx.conf
+++ b/etc/stx.conf
@@ -32,6 +32,12 @@ build : lint
     VITE_BUILD_FORMATS=es,cjs vite --config etc/vite.mts build --mode production
     VITE_BUILD_FORMATS=umd    vite --config etc/vite.mts build --mode production
 
+build-doc
+    node etc/d2.mts doc/theme.d2 doc/mqtt-plus-1-event-emission.d2    doc/mqtt-plus-1-event-emission.svg
+    node etc/d2.mts doc/theme.d2 doc/mqtt-plus-2-stream-transfer.d2   doc/mqtt-plus-2-stream-transfer.svg
+    node etc/d2.mts doc/theme.d2 doc/mqtt-plus-3-service-call.d2      doc/mqtt-plus-3-service-call.svg
+    node etc/d2.mts doc/theme.d2 doc/mqtt-plus-4-resource-transfer.d2 doc/mqtt-plus-4-resource-transfer.svg
+
 #   run test suite
 test
     tsc --project tst/tsc.json --noEmit && \
