--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     },
     "dependencies": {
         "nanoid":                     "5.1.6",
-        "cbor":                       "10.0.11"
+        "cbor":                       "10.0.11",
+        "p-lazy":                     "5.0.0"
     },
     "engines": {
         "node":                       ">=16.0.0"
