show also warnings

--- a/etc/stx.conf
+++ b/etc/stx.conf
@@ -41,7 +41,7 @@ build-doc
 test
     tsc --project tst/tsc.json --noEmit && \
     eslint --config etc/eslint.mts tst/mqtt-plus.spec.ts && \
-    NODE_OPTIONS="--import=tsx" mocha tst/mqtt-plus.spec.ts
+    NODE_OPTIONS="--import=tsx --trace-warnings" mocha tst/mqtt-plus.spec.ts
 
 #   execute simple sample for testing
 sample
