--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "globals":                    "17.0.0",
         "@eslint/js":                 "9.39.2",
         "@eslint/eslintrc":           "3.3.3",
+        "knip":                       "5.82.1",
         "jiti":                       "2.6.1",
         "tsx":                        "4.21.0",
         "mocha":                      "11.7.5",
@@ -37,8 +38,8 @@
         "sinon-chai":                 "4.0.1",
         "sinon":                      "21.0.1",
         "typescript":                 "5.9.3",
-        "typescript-eslint":          "8.53.0",
-        "@typescript-eslint/parser":  "8.53.0",
+        "typescript-eslint":          "8.53.1",
+        "@typescript-eslint/parser":  "8.53.1",
         "mqtt":                       "5.14.1",
         "mosquitto":                  "0.9.6",
         "vite":                       "7.3.1",
