add Knip for linting

--- a/etc/stx.conf
+++ b/etc/stx.conf
@@ -25,7 +25,8 @@
 #   static code analysis (linting)
 lint
     tsc --project etc/tsc.json --noEmit && \
-    eslint --config etc/eslint.mts src/*.ts sample/*.ts
+    eslint --config etc/eslint.mts src/*.ts sample/*.ts && \
+    npx knip -n -c etc/knip.jsonc
 
 #   code compilation/transpiling (building)
 build : lint
