--- a/etc/stx.conf
+++ b/etc/stx.conf
@@ -33,10 +33,19 @@ build : lint
     VITE_BUILD_FORMATS=es,cjs vite --config etc/vite.mts build --mode production
     VITE_BUILD_FORMATS=umd    vite --config etc/vite.mts build --mode production
 
+#   documentation compilation
 build-doc
     node etc/d2.mts doc/theme.d2 doc/mqtt-plus-1-event-emission.d2    doc/mqtt-plus-1-event-emission.svg
     node etc/d2.mts doc/theme.d2 doc/mqtt-plus-2-service-call.d2      doc/mqtt-plus-2-service-call.svg
     node etc/d2.mts doc/theme.d2 doc/mqtt-plus-3-resource-transfer.d2 doc/mqtt-plus-3-resource-transfer.svg
+
+#   development loop
+dev
+    chokidar \
+        "etc/*" "src/*" "tst/*" \
+        -c "npm start build" \
+        --debounce 1000 --throttle 1000 \
+        --initial --verbose
 
 #   run test suite
 test
