--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "vite-plugin-node-polyfills": "0.25.0",
         "@wroud/vite-plugin-tsc":     "0.12.2",
         "@terrastruct/d2":            "0.1.33",
+        "chokidar-cli":               "3.0.0",
 
         "@types/node":                "25.0.10",
         "@types/mocha":               "10.0.10",
