add more keywords

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
     "name":                           "mqtt-plus",
     "version":                        "0.9.13",
     "description":                    "MQTT Communication Patterns",
-    "keywords":                       [ "mqtt", "event", "service", "rpc", "request", "response" ],
+    "keywords":                       [   "mqtt",
+                                          "event", "emit",
+                                          "service", "call", "rpc", "request", "response",
+                                          "resource", "push", "fetch" ],
     "license":                        "MIT",
     "repository":                     { "type": "git", "url": "git+https://github.com/rse/mqtt-plus.git" },
     "homepage":                       "https://github.com/rse/mqtt-plus",
